# InferenceGate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: qa.yml
docs/: architecture.md  cli.md  configuration_file.md  headers.md  index.md  pytest-integration.md  todo.md
docs/modules/: index.md
src/inference_gate/: __init__.py  cli.py  cli_format.py  config.py  headers.py  inference_gate.py  modes.py  pytest_plugin.py
src/inference_gate/frontend/: __init__.py
src/inference_gate/inflow/: __init__.py  admin.py  server.py
src/inference_gate/outflow/: __init__.py  client.py  model_router.py
src/inference_gate/recording/: __init__.py  atomic_io.py  hashing.py  models.py  reassembly.py  storage.py  tape_index.py  tape_parser.py  tape_writer.py
src/inference_gate/router/: __init__.py  router.py
src/inference_gate/webui/: __init__.py  api.py  server.py
src/inference_gate/webui/static/: .gitkeep  index.html
src/inference_gate/webui/static/assets/: index-3mjQG4Sn.js  index-BFbFY-WO.css  index-B_SyjKji.js  index-BguBNYst.css  index-BiiEk4_R.css  index-C2ZaLOxL.js  index-CP5OG60Y.js  index-CnSnK3t4.js  index-DIx1qEI-.js  index-DY74WqvV.css  index-DuIQO3wE.css
src/inference_replay/: __init__.py  cli.py  modes.py  server.py  storage.py
tests/: conftest.py  test_admin.py  test_cassette_replay.py  test_cli.py  test_config.py  test_error_recording.py  test_inference_gate.py  test_outflow_router.py  test_pytest_plugin.py  test_reassembly.py  test_router.py  test_server.py  test_storage.py  test_subprocess_server.py  test_webui.py
tests/cassettes/: index.tsv
tests/cassettes/requests/: 31e7a952d38d__this-is-a-test-prompt-reply-with-only.tape  6c72599f3142__what-is-2-2-reply-with-only-the-number.tape  d60c8e07905c__what-is-2-2-reply-with-only-the-number.tape  e5ce50e06a1e__this-is-a-test-prompt-reply-with-only.tape
tests/cassettes/requests_raw/: 0db70f9d5a47.json  110c9ecbda95.json  22dc8463e070.json  31e7a952d38d.json  3934735a5e90.json  6695ef73115a.json  a850866134f3.json  cc2d2699cb59.json  d60c8e07905c.json
tests/cassettes/responses/: 23ccf77fd88d.chunks.ndjson  23ccf77fd88d.json  4d5d48107e7b.chunks.ndjson  4d5d48107e7b.json  be5dc1a0b6eb.chunks.ndjson  be5dc1a0b6eb.json  ed0243938bd1.chunks.ndjson  ed0243938bd1.json
tests/tests_performance/: test_performance.py
tests_sample_app/: conftest.py  pytest.ini  sample_cli.py  test_sample_app.py
webui-frontend/: index.html  package-lock.json  package.json  vite.config.ts
webui-frontend/src/: App.tsx  index.css
webui-frontend/src/api/: client.ts
webui-frontend/src/components/: CacheTable.tsx  Layout.tsx  StatsCards.tsx
webui-frontend/src/pages/: CacheList.tsx  Dashboard.tsx  EntryDetail.tsx
