[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-gate"
version = "0.1.0"
description = "Python library for efficient and convenient AI inference replay in testing, debugging and development"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DanielKluev"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.10.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-aiohttp>=1.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
inference-gate = "inference_gate.cli:main"

[project.urls]
Homepage = "https://github.com/DanielKluev/InferenceGate"
Repository = "https://github.com/DanielKluev/InferenceGate"

[tool.setuptools.packages.find]
where = ["src"]

# -------------------------------------------------------------------
# YAPF configuration section

[tool.yapf]
# This section contains the configuration for the YAPF formatter.
# It's tuned to keep code dense, especially function signatures.
based_on_style = "google" 
column_limit = 140
split_before_named_assigns = false
coalesce_brackets = true
dedent_closing_brackets = false

# -------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# -------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
